src/test/deca/context/invalid/affectation-wrongTypeAffectationFloatBool.deca
{
	float i = 5.0;
    boolean c = true;
    i = c;
}
